@@ -58,6 +58,7 @@ Steven Bethard
 Stephen Bevan
 Ron Bickers
 Dominic Binks
+Philippe Biondi
 Stuart Bishop
 Roy Bixler
 Martin Bless
