@@ -216,6 +216,8 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Patch #1103116: Basic AF_NETLINK support.
+
 - Bug #1402308, (possible) segfault when using mmap.mmap(-1, ...)
 
 - Bug #1400822, _curses over{lay,write} doesn't work when passing 6 ints.
